[package]
name = "lsp-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["sync","io-util","io-std","process","rt","macros","rt-multi-thread"] }
anyhow = "1.0.100"
futures = "0.3.31"
env_logger = "0.11.8"
log = "0.4.28"
dashmap = "6.1.0"
chrono = "0.4.42"

[dependencies.tower-lsp]
version = "0.20.0"
default-features = true
features = ["runtime-tokio"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.0"
tokio = { version = "1.47.1", features = ["full"] }

[[bench]]
name = "performance"
harness = false
